95% done with two click refactor

--- a/engine.cfg
+++ b/engine.cfg
@@ -24,6 +24,11 @@ height=960
 gen_mipmaps=false
 filter=false
 
+[input]
+
+select=[mbutton(0, 1)]
+deselect=[mbutton(0, 2)]
+
 [physics_2d]
 
 large_object_surface_treshold_in_cells=512
