graphics overhaul, rescaling

--- a/engine.cfg
+++ b/engine.cfg
@@ -17,16 +17,27 @@ force_fps=60
 
 [display]
 
-width=1400
-height=960
+fullscreen=true
+keep_screen_on=false
+text_edit_idle_detect_sec=3
+width=1600
+height=1080
+stretch_mode="2d"
+resizable=true
+use_vsync=true
+use_2d_pixel_snap=true
+stretch_aspect="keep"
 
 [image_loader]
 
+filter=true
 gen_mipmaps=false
-filter=false
 
 [input]
 
+detailed_description=[key(Space)]
+debug_level_skip=[key(N)]
+toggle_fullscreen=[key(F)]
 select=[mbutton(0, 1)]
 deselect=[mbutton(0, 2)]
 
@@ -38,4 +49,4 @@ default_linear_damp=0.0
 
 [render]
 
-default_clear_color=#ff113e41
+default_clear_color=#ff2d5758
