--- a/engine.cfg
+++ b/engine.cfg
@@ -13,6 +13,7 @@ global="*res://global.gd"
 
 [debug]
 
+print_fps=false
 collision_shape_color=#7f0099b2
 force_fps=60
 
@@ -41,6 +42,10 @@ debug_level_skip=[key(N)]
 toggle_fullscreen=[key(F)]
 select=[mbutton(0, 1)]
 deselect=[mbutton(0, 2)]
+
+[physics]
+
+fixed_fps=60
 
 [physics_2d]
 
