life system, sound effects, start of new enemy

--- a/engine.cfg
+++ b/engine.cfg
@@ -6,6 +6,10 @@ name="divinity-tactics"
 main_scene="res://Menu.tscn"
 icon="res://icon.png"
 
+[audio]
+
+fx_volume_scale=0.3
+
 [autoload]
 
 AnimationQueue="*res://AnimationQueue.tscn"
