working differentiated tooltips

--- a/engine.cfg
+++ b/engine.cfg
@@ -40,7 +40,7 @@ gen_mipmaps=false
 
 [input]
 
-detailed_description=[key(Space)]
+detailed_description=[key(Tab)]
 debug_level_skip=[key(N)]
 toggle_fullscreen=[key(F)]
 select=[mbutton(0, 1)]
