lots of polishing, bug fixes, and balancing. Right before trying to figure out this pesky 0 != 0 bug

--- a/engine.cfg
+++ b/engine.cfg
@@ -12,6 +12,7 @@ fx_volume_scale=0.5
 
 [autoload]
 
+constants="*res://constants.gd"
 AnimationQueue="*res://AnimationQueue.tscn"
 global="*res://global.gd"
 
@@ -40,11 +41,12 @@ gen_mipmaps=false
 
 [input]
 
+deselect=[mbutton(0, 2), key(Escape)]
+restart=[key(R)]
 detailed_description=[key(Tab)]
 debug_level_skip=[key(N)]
 toggle_fullscreen=[key(F)]
 select=[mbutton(0, 1)]
-deselect=[mbutton(0, 2)]
 
 [physics]
 
