multiple game modes, start of pyromancer, reinforcement previews, start of walls

--- a/engine.cfg
+++ b/engine.cfg
@@ -24,12 +24,12 @@ force_fps=60
 
 [display]
 
+stretch_mode="2d"
 fullscreen=true
 keep_screen_on=false
 text_edit_idle_detect_sec=3
 width=1600
 height=1080
-stretch_mode="2d"
 resizable=true
 use_vsync=true
 stretch_aspect="keep"
@@ -41,6 +41,9 @@ gen_mipmaps=false
 
 [input]
 
+test_action=[key(T)]
+test_action2=[key(Y)]
+test_action3=[key(U)]
 deselect=[mbutton(0, 2), key(Escape)]
 restart=[key(R)]
 detailed_description=[key(Tab)]
