new units, assist system's effects, misc refactoring

--- a/engine.cfg
+++ b/engine.cfg
@@ -22,15 +22,16 @@ collision_shape_color=#7f0099b2
 
 [display]
 
-stretch_mode="2d"
+width=1200
+use_2d_pixel_snap=false
 fullscreen=true
+stretch_mode="2d"
+stretch_aspect="keep"
+height=1080
 keep_screen_on=false
 text_edit_idle_detect_sec=3
-width=1600
-height=1080
 resizable=true
 use_vsync=true
-stretch_aspect="keep"
 
 [image_loader]
 
