before changes to make default movement into hops

--- a/engine.cfg
+++ b/engine.cfg
@@ -18,11 +18,12 @@ global="*res://global.gd"
 
 [debug]
 
+force_fps=60
 collision_shape_color=#7f0099b2
 
 [display]
 
-width=1200
+width=750
 use_2d_pixel_snap=false
 fullscreen=true
 stretch_mode="2d"
