small bugfixes, coin system

--- a/engine.cfg
+++ b/engine.cfg
@@ -18,7 +18,6 @@ global="*res://global.gd"
 
 [debug]
 
-force_fps=60
 collision_shape_color=#7f0099b2
 
 [display]
@@ -50,6 +49,10 @@ detailed_description=[key(Tab)]
 debug_level_skip=[key(N)]
 toggle_fullscreen=[key(F)]
 select=[mbutton(0, 1)]
+
+[physics]
+
+fixed_fps=60
 
 [physics_2d]
 
