changed settings to portrait

--- a/engine.cfg
+++ b/engine.cfg
@@ -18,11 +18,11 @@ global="*res://global.gd"
 
 [debug]
 
-force_fps=60
 collision_shape_color=#7f0099b2
 
 [display]
 
+orientation="portrait"
 width=650
 use_2d_pixel_snap=false
 fullscreen=true
