--- a/export.cfg
+++ b/export.cfg
@@ -37,9 +37,9 @@ keystore/release_password=""
 keystore/release_user=""
 one_click_deploy/clear_previous_install=true
 package/icon=""
-package/name=""
+package/name="hexenguard"
 package/signed=true
-package/unique_name="org.godotengine.$genname"
+package/unique_name="jeff.hexenguard"
 permissions/access_checkin_properties=false
 permissions/access_coarse_location=false
 permissions/access_fine_location=false
