wrapping up tutorial system

--- a/engine.cfg
+++ b/engine.cfg
@@ -42,9 +42,9 @@ gen_mipmaps=false
 
 [input]
 
-test_action=[key(T)]
-test_action2=[key(Y)]
-test_action3=[key(U)]
+test_action=[key(F1)]
+test_action2=[key(F2)]
+test_action3=[key(F3)]
 deselect=[mbutton(0, 2), key(Escape)]
 restart=[key(R)]
 detailed_description=[key(Tab)]
