lots of small bug fixes and polishing, new levels, about to mess with prediction text

--- a/engine.cfg
+++ b/engine.cfg
@@ -12,6 +12,7 @@ fx_volume_scale=0.3
 
 [autoload]
 
+DataLogger="*res://DataLogger.gd"
 constants="*res://constants.gd"
 AnimationQueue="*res://AnimationQueue.tscn"
 global="*res://global.gd"
