post initial version release, midst of refactoring tutorials

--- a/engine.cfg
+++ b/engine.cfg
@@ -3,7 +3,7 @@ framerate=true
 [application]
 
 name="divinity-tactics"
-main_scene="res://Menu.tscn"
+main_scene="res://LevelSelect/LevelSelect.tscn"
 icon="res://icon.png"
 
 [audio]
