--- a/export.cfg
+++ b/export.cfg
@@ -17,7 +17,7 @@ convert_text_scenes=true
 
 [export_filter]
 
-filter="*.level"
+filter="*.level, *.description"
 filter_exclude=""
 type="resources"
 
