--- a/engine.cfg
+++ b/engine.cfg
@@ -3,7 +3,7 @@ framerate=true
 [application]
 
 name="divinity-tactics"
-main_scene="res://LevelSelect/LevelSelect.tscn"
+main_scene="res://LevelSelect/LevelSetSelect.tscn"
 icon="res://icon.png"
 
 [audio]
@@ -12,6 +12,7 @@ fx_volume_scale=0.3
 
 [autoload]
 
+Levels="*res://Levels.tscn"
 DataLogger="*res://DataLogger.gd"
 constants="*res://constants.gd"
 AnimationQueue="*res://AnimationQueue.tscn"
