--- a/engine.cfg
+++ b/engine.cfg
@@ -3,7 +3,7 @@ framerate=true
 [application]
 
 name="divinity-tactics"
-main_scene="res://LevelSelect/LevelSetSelect.tscn"
+main_scene="res://Menu.tscn"
 icon="res://icon.png"
 
 [audio]
@@ -25,12 +25,11 @@ collision_shape_color=#7f0099b2
 
 [display]
 
+height=768
+width=1024
 use_2d_pixel_snap=false
 stretch_mode="2d"
-height=1080
-width=670
 orientation="portrait"
-fullscreen=true
 stretch_aspect="keep"
 keep_screen_on=false
 text_edit_idle_detect_sec=3
