levels, about to try to fix on_ready assist bug

--- a/engine.cfg
+++ b/engine.cfg
@@ -27,6 +27,7 @@ collision_shape_color=#7f0099b2
 
 height=768
 width=1024
+tooltip_delay=0.7
 use_2d_pixel_snap=false
 stretch_mode="2d"
 orientation="portrait"
