new turn update animation

--- a/engine.cfg
+++ b/engine.cfg
@@ -12,6 +12,7 @@ fx_volume_scale=0.3
 
 [autoload]
 
+AssistSystem="*res://AssistSystem.tscn"
 Levels="*res://Levels.tscn"
 DataLogger="*res://DataLogger.gd"
 constants="*res://constants.gd"
