levels, bug fixes from playtesting, fancy star cursor

--- a/engine.cfg
+++ b/engine.cfg
@@ -3,7 +3,7 @@ framerate=true
 [application]
 
 name="divinity-tactics"
-main_scene="res://Menu.tscn"
+main_scene="res://LevelSelect/LevelSetSelect.tscn"
 icon="res://icon.png"
 
 [audio]
@@ -26,8 +26,8 @@ collision_shape_color=#7f0099b2
 
 [display]
 
-height=1040
-width=670
+height=768
+width=1024
 tooltip_delay=0.7
 use_2d_pixel_snap=false
 stretch_mode="2d"
