lots of backend stuff for level scores, bug fixes, UI updates

--- a/engine.cfg
+++ b/engine.cfg
@@ -12,6 +12,7 @@ fx_volume_scale=0.3
 
 [autoload]
 
+State="*res://State.gd"
 AssistSystem="*res://AssistSystem.tscn"
 Levels="*res://Levels.tscn"
 DataLogger="*res://DataLogger.gd"
