--- a/engine.cfg
+++ b/engine.cfg
@@ -3,7 +3,7 @@ framerate=true
 [application]
 
 name="divinity-tactics"
-main_scene="res://LevelSelect/LevelSetSelect.tscn"
+main_scene="res://DesktopLevelSelect/LevelSetSelect.tscn"
 icon="res://icon.png"
 
 [audio]
@@ -12,6 +12,7 @@ fx_volume_scale=0.3
 
 [autoload]
 
+HTTPHelper="*res://HTTPHelper.tscn"
 State="*res://State.gd"
 AssistSystem="*res://AssistSystem.tscn"
 Levels="*res://Levels.tscn"
