graphical updates, level score guide, music

--- a/engine.cfg
+++ b/engine.cfg
@@ -12,6 +12,7 @@ fx_volume_scale=0.3
 
 [autoload]
 
+MusicPlayer="*res://MusicPlayer.tscn"
 HTTPHelper="*res://HTTPHelper.tscn"
 State="*res://State.gd"
 AssistSystem="*res://AssistSystem.tscn"
