--- a/engine.cfg
+++ b/engine.cfg
@@ -2,7 +2,7 @@ framerate=true
 
 [application]
 
-name="divinity-tactics"
+name="Grimante"
 main_scene="res://DesktopLevelSelect/LevelSetSelect.tscn"
 icon="res://icon.png"
 
@@ -12,6 +12,7 @@ fx_volume_scale=0.3
 
 [autoload]
 
+InputHandler="*res://InputHandler.tscn"
 MusicPlayer="*res://MusicPlayer.tscn"
 HTTPHelper="*res://HTTPHelper.tscn"
 State="*res://State.gd"
