settings and pause menu

--- a/engine.cfg
+++ b/engine.cfg
@@ -8,6 +8,7 @@ icon="res://icon.png"
 
 [audio]
 
+stream_volume_scale=1.0
 fx_volume_scale=0.6
 
 [autoload]
@@ -30,13 +31,16 @@ collision_shape_color=#7f0099b2
 
 [display]
 
-stretch_mode="2d"
+fullscreen=false
+test_width=1024
+test_height=768
+height=768.0
+width=1024.0
 stretch_aspect="keep"
-height=768
-width=1024
+orientation="landscape"
+stretch_mode="2d"
 use_2d_pixel_snap=false
 tooltip_delay=0.7
-orientation="portrait"
 keep_screen_on=false
 text_edit_idle_detect_sec=3
 resizable=true
@@ -49,12 +53,13 @@ gen_mipmaps=false
 
 [input]
 
+ui_cancel=[jbutton(0, 1), key(Escape)]
+deselect=[mbutton(0, 2), key(D)]
 placing_traps=[key(F6)]
 toggle=[key(F5)]
 test_action=[key(F1)]
 test_action2=[key(F2)]
 test_action3=[key(F3)]
-deselect=[mbutton(0, 2), key(Escape)]
 restart=[key(R)]
 detailed_description=[key(Tab)]
 debug_level_skip=[key(N)]
