bugfixes, minor polishing from playtesting

--- a/engine.cfg
+++ b/engine.cfg
@@ -8,8 +8,8 @@ icon="res://icon.png"
 
 [audio]
 
-stream_volume_scale=0.13
-fx_volume_scale=0.23
+stream_volume_scale=0.2
+fx_volume_scale=0.17
 
 [autoload]
 
@@ -54,10 +54,11 @@ gen_mipmaps=false
 [input]
 
 ui_cancel=[jbutton(0, 1), key(Escape)]
-deselect=[mbutton(0, 2), key(D)]
+toggle_coords=[key(T)]
+deselect=[mbutton(0, 2), key(D), key(Escape)]
+test_action=[key(F1), key(0)]
 placing_traps=[key(F6)]
 toggle=[key(F5)]
-test_action=[key(F1)]
 test_action2=[key(F2)]
 test_action3=[key(F3)]
 restart=[key(R)]
