before stars rework

--- a/engine.cfg
+++ b/engine.cfg
@@ -9,7 +9,7 @@ icon="res://icon.png"
 [audio]
 
 stream_volume_scale=0.2
-fx_volume_scale=0.17
+fx_volume_scale=0.25
 
 [autoload]
 
@@ -32,8 +32,8 @@ collision_shape_color=#7f0099b2
 [display]
 
 fullscreen=false
-test_width=1024
-test_height=768
+test_height=768.0
+test_width=1024.0
 height=768.0
 width=1024.0
 stretch_aspect="keep"
@@ -54,6 +54,8 @@ gen_mipmaps=false
 [input]
 
 ui_cancel=[jbutton(0, 1), key(Escape)]
+ui_cycle=[mbutton(0, 1)]
+detailed_description=[key(Tab)]
 toggle_coords=[key(T)]
 deselect=[mbutton(0, 2), key(D), key(Escape)]
 test_action=[key(F1), key(0)]
@@ -62,7 +64,6 @@ toggle=[key(F5)]
 test_action2=[key(F2)]
 test_action3=[key(F3)]
 restart=[key(R)]
-detailed_description=[key(Tab)]
 debug_level_skip=[key(N)]
 toggle_fullscreen=[key(F)]
 select=[mbutton(0, 1)]
