alright, testing new achievements

--- a/engine.cfg
+++ b/engine.cfg
@@ -13,6 +13,7 @@ fx_volume_scale=0.26
 
 [autoload]
 
+SteamHandler="*res://SteamHandler.gd"
 MusicPlayer="*res://MusicPlayer.tscn"
 InputHandler="*res://InputHandler.tscn"
 HTTPHelper="*res://HTTPHelper.tscn"
