--- a/export.cfg
+++ b/export.cfg
@@ -270,9 +270,9 @@ display/high_res=false
 [platform:Windows Desktop]
 
 binary/64_bits=true
-custom_binary/debug=""
-custom_binary/release=""
-debug/debugging_enabled=false
+custom_binary/debug="C:/godot_and_steam2.1.4/windows-engine-214-64bit.exe"
+custom_binary/release="C:/godot_and_steam2.1.4/windows-template-214-64bit.exe"
+debug/debugging_enabled=true
 resources/bundle_dependencies_(for_optical_disc)=true
 resources/pack_mode=0
 
