--- a/export.cfg
+++ b/export.cfg
@@ -263,16 +263,16 @@ application/short_version="1.0"
 application/signature="godotmacgame"
 application/version="1.0"
 custom_package/debug=""
-custom_package/release=""
+custom_package/release="C:/osx-214-fat/osx-template-214-fat.zip"
 debug/debugging_enabled=false
 display/high_res=false
 
 [platform:Windows Desktop]
 
-binary/64_bits=true
-custom_binary/debug="C:/godot_and_steam2.1.4/windows-engine-214-64bit.exe"
-custom_binary/release="C:/godot_and_steam2.1.4/windows-template-214-64bit.exe"
-debug/debugging_enabled=true
+binary/64_bits=false
+custom_binary/debug=""
+custom_binary/release="C:/windows-214-32bit/windows-template-214-32bit.exe"
+debug/debugging_enabled=false
 resources/bundle_dependencies_(for_optical_disc)=true
 resources/pack_mode=0
 
