--- a/engine.cfg
+++ b/engine.cfg
@@ -55,8 +55,8 @@ gen_mipmaps=false
 [input]
 
 ui_cancel=[jbutton(0, 1), key(Escape)]
+toggle_coords=[key(F5)]
 detailed_description=[key(Tab)]
-toggle_coords=[key(T)]
 deselect=[mbutton(0, 2), key(D), key(Escape)]
 test_action=[key(F1), key(0)]
 placing_traps=[key(F6)]
