small bug fixes

--- a/export.cfg
+++ b/export.cfg
@@ -254,16 +254,16 @@ resources/pack_mode=1
 [platform:Mac OSX]
 
 application/bits_mode=0
-application/copyright=""
+application/copyright="aftermonk 2018"
 application/icon=""
-application/identifier="org.godotengine.macgame"
-application/info="Made with Godot Engine"
-application/name=""
+application/identifier="aftermonk.grimante"
+application/info="strategy/puzzle game"
+application/name="Grimante"
 application/short_version="1.0"
-application/signature="godotmacgame"
+application/signature="grimante"
 application/version="1.0"
 custom_package/debug=""
-custom_package/release="C:/osx-214-fat/osx-template-214-fat.zip"
+custom_package/release=""
 debug/debugging_enabled=false
 display/high_res=false
 
@@ -271,7 +271,7 @@ display/high_res=false
 
 binary/64_bits=false
 custom_binary/debug=""
-custom_binary/release="C:/windows-214-32bit/windows-template-214-32bit.exe"
+custom_binary/release=""
 debug/debugging_enabled=false
 resources/bundle_dependencies_(for_optical_disc)=true
 resources/pack_mode=0
