taking out data logging

--- a/export.cfg
+++ b/export.cfg
@@ -271,7 +271,7 @@ display/high_res=false
 
 binary/64_bits=false
 custom_binary/debug=""
-custom_binary/release=""
+custom_binary/release="C:/windows-214-32bit/windows-template-214-32bit.exe"
 debug/debugging_enabled=false
 resources/bundle_dependencies_(for_optical_disc)=true
 resources/pack_mode=0
